--- a/adminpanels/build.gradle
+++ b/adminpanels/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation "com.mikepenz:materialdrawer:6.1.2"
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
