--- a/adminpanels/src/main/AndroidManifest.xml
+++ b/adminpanels/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         <activity android:name=".Activity.DataAddMenuActivity"
             android:parentActivityName=".MainActivity"></activity>
         <activity android:name=".Activity.DataMenuActivity" />
-        <activity android:name=".Activity.DataUserActivity" />
+        <activity android:name=".Activity.DataUserActivity"
+            android:parentActivityName=".MainActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
