--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.SimpanAlamatActivity"></activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".Activity.SplashActivity" />
+
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Activity.SimpanAlamatActivity" />
         <activity android:name=".Activity.RegisterActivity" />
         <activity android:name=".Activity.PaymentActivity" />
         <activity android:name=".Activity.LoginActivity" />
         <activity android:name=".Activity.Equipment" />
         <activity android:name=".Activity.DetailMenuActivity" />
         <activity android:name=".Activity.ListMenuActivity" />
-        <activity android:name=".Activity.WelcomeActivity">
+        <activity android:name=".Activity.WelcomeActivity" />
+        <activity android:name=".Activity.SplashActivity" />
+        <activity android:name=".Activity.IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
