--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.workspace.nusali">
 
+    <uses-permission android:name="com.android.vending.BILLING" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -11,8 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Activity.DeliveryLocationActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".Activity.SimpanAlamatActivity" />
         <activity android:name=".Activity.RegisterActivity" />
         <activity android:name=".Activity.PaymentActivity" />
