--- a/adminpanels/src/main/AndroidManifest.xml
+++ b/adminpanels/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.DataPesanan"></activity>
+        <activity android:name=".adminRegister"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Activity.DataPesanan" />
         <activity
             android:name=".Activity.DataAddMenuActivity"
             android:parentActivityName=".MainActivity" />
@@ -19,7 +21,7 @@
         <activity
             android:name=".Activity.DataUserActivity"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".adminLogin">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
