admin login, combo box, responsive layout

--- a/adminpanels/src/main/AndroidManifest.xml
+++ b/adminpanels/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         <activity
             android:name=".Activity.DataAddMenuActivity"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".Activity.DataMenuActivity" />
+        <activity android:name=".Activity.DataMenuActivity"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".Activity.DataUserActivity"
             android:parentActivityName=".MainActivity" />
