memperbaiki bug loading bar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.3.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
-
+    //library progress bar
+    compile 'com.pnikosis:materialish-progress:1.7'
     //library billing prosesor
     implementation 'com.anjlab.android.iab.v3:library:1.0.44'
 
