ADMIN SELESAI Belum Final

--- a/adminpanels/build.gradle
+++ b/adminpanels/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-rc01'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
-    implementation "com.mikepenz:materialdrawer:6.1.2"
+    implementation 'com.orhanobut:dialogplus:1.11'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
