--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.workspace.nusali">
 
     <uses-permission android:name="com.android.vending.BILLING" />
@@ -11,18 +12,31 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Activity.DeliveryLocationActivity"></activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".Activity.RegisterActivity" />
-        <activity android:name=".Activity.PaymentActivity" />
-        <activity android:name=".Activity.LoginActivity" />
-        <activity android:name=".Activity.Equipment" />
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup">
+        <activity
+            android:name=".Activity.DeliveryLocationActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Activity.RegisterActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Activity.PaymentActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Activity.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Activity.Equipment"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".Activity.DetailMenuActivity"
-            android:parentActivityName=".MainActivity"/>
-        <activity android:name=".Activity.ListMenuActivity" />
-        <activity android:name=".Activity.WelcomeActivity" />
-        <activity android:name=".Activity.SplashActivity" />
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Activity.ListMenuActivity"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.DarkActionBar"/>
+        <activity android:name=".Activity.WelcomeActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Activity.SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".Activity.IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
