--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".Activity.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".Activity.IntroActivity">
+        <activity android:name=".Activity.IntroActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
